<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/subHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/base_margin"
            android:text="@string/change_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <EditText
                android:id="@+id/current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_margin"
                android:layout_marginEnd="@dimen/base_margin"
                android:hint="@string/current_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_margin"
                android:layout_marginEnd="@dimen/base_margin"
                android:hint="@string/new_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_margin"
                android:layout_marginEnd="@dimen/base_margin"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/base_margin"
            android:background="@drawable/primary_button_selector"
            android:paddingStart="@dimen/base_margin"
            android:paddingEnd="@dimen/base_margin"
            android:text="@string/save"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/forgot_password" />
    </LinearLayout>
</layout>
