<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plans" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/management" />
    </com.google.android.material.tabs.TabLayout>

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/bestsellers"
        android:scaleType="fitCenter"
        android:src="@drawable/top_5_vendor"
        app:layout_constraintBottom_toTopOf="@+id/statReport"
        app:layout_constraintEnd_toStartOf="@+id/vendorManageButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        tools:src="@drawable/top_5_vendor"
        tools:srcCompat="@drawable/top_5_vendor" />

    <ImageButton
        android:id="@+id/addRemoveVendorButton"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/add_remove_vendors"
        android:scaleType="fitCenter"
        android:src="@drawable/add_remove_512_3_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vendorCheckInfo"
        tools:srcCompat="@drawable/add_remove_512_3_" />

    <ImageButton
        android:id="@+id/statReport"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/check_stats"
        android:scaleType="fitCenter"
        android:src="@drawable/stats_512"
        app:layout_constraintStart_toStartOf="@id/imageButton11"
        app:layout_constraintTop_toTopOf="@id/addRemoveVendorButton"
        tools:src="@drawable/stats_512"
        tools:srcCompat="@drawable/stats_512" />

    <ImageButton
        android:id="@+id/vendorCheckInfo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/vendor_management"
        android:scaleType="fitCenter"
        android:src="@drawable/vendor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton11"
        app:layout_constraintTop_toTopOf="@+id/imageButton11"
        tools:srcCompat="@drawable/vendor_512_1_" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/top5vendorsButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/top_5_vendor"
        app:layout_constraintBottom_toTopOf="@+id/statReport"
        app:layout_constraintEnd_toStartOf="@+id/vendor_check_Button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@id/imageButton11"
        app:layout_constraintTop_toBottomOf="@+id/imageButton11"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/vendor_check_Button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="12dp"
        android:text="@string/check_vendors_info"
        app:layout_constraintBottom_toTopOf="@+id/addRemoveVendorButton"
        app:layout_constraintStart_toStartOf="@id/vendorCheckInfo"
        app:layout_constraintTop_toTopOf="@id/top5vendorsButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/stat_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/vendors_stats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/imageButton11"
        app:layout_constraintTop_toBottomOf="@+id/statReport"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/addRemoveButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/add_remove_a_vendor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/vendorCheckInfo"
        app:layout_constraintTop_toTopOf="@id/stat_button"
        app:layout_constraintVertical_bias="0.526" />

</androidx.constraintlayout.widget.ConstraintLayout>